#pragma once

enum VehicleType {
    TWO_WHEELER,
    FOUR_WHEELER
};
